--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ The main script on this repo is [build_region.R](https://github.com/npct/pct-loa
 This script runs the R code contained within while creating a summary of the data generating process.
 It even reports summary statistics from the data as it is created.
 
-To run `load.Rmd` you should be able to simply hit 'Knit HTML' while loaded RStudio.
+To run `build_region.R` you should be able to simply hit 'Knit HTML' while loaded RStudio.
 There are other dependencies, listed below.
 
 **Note: `rq.Rds` and `rf.Rds` must be downloaded from here before the build: https://github.com/npct/pct-bigdata/releases **
