--- a/model_output.Rmd
+++ b/model_output.Rmd
@@ -48,11 +48,13 @@ This document provides information about the data underlying the Propensity to C
 
 This version of the PCT uses origin-destination (OD) data on travel to work from the 2011 Census. The dataset reports the number of people travelling by different modes from Middle Super Output Area ([MSOA](https://data.gov.uk/dataset/middle-layer-super-output-areas-2001-to-middle-layer-super-output-areas-2011-to-local-authority)) zones. There were `r prettyNum(sum(zones$all), big.mark = ",", scientific = F)` commuters living in `r capitalize_region(region)` recorded in the 2011 Census. All of these are represented in the zones data produced by the PCT.
 
-In `r capitalize_region(region)` there are `r nrow(l)` between-zone flows that a) start and end in `r capitalize_region(region)`, b) have a straight-line (Euclidean) distance of less than `r mdist`km and a fast-route distance less than 30km, and c) contain more than `r mflow` commuters (by any mode, counting commuters in both directions).   These `r nrow(l)` between-zone flows are visualised as **Straight Lines**, **Routes** (fast and quiet) and the **Route Network** on the interactive map, and account for `r round(sum(l$all) / sum(zones$all) * 100)`% of all commuters living in `r capitalize_region(region)`.
+In `r capitalize_region(region)` there are `r nrow(l)` flows between MSOAs that a) start and end in `r capitalize_region(region)`, b) have a straight-line (Euclidean) distance of less than `r mdist`km and a fast-route distance less than 30km, and c) contain more than `r mflow` commuters (by any mode, counting commuters in both directions).   These `r nrow(l)` between-zone MSOA flows are visualised as **Straight Lines**, **Routes** (fast and quiet) and the **Route Network (MSOA)** on the interactive map, and account for `r round(sum(l$all) / sum(zones$all) * 100)`% of all commuters living in `r capitalize_region(region)`.
 
-Between-zone flows exclude **within-zone travel**, when the zone of origin is the same as the zone of destination. Within-zone travel is represented by red points on the map when the lines are shown, and accounts for `r round(sum(cents$all) / sum(zones$all) * 100)`% of commuters in `r capitalize_region(region)`. The between-zone flows visualised as lines and routes on the map also exclude commuters travelling outside `r capitalize_region(region)` and people with no fixed place of work.
+Between-zone MSOA flows exclude **within-MSOA travel**, when the MSOA zone of origin is the same as the zone of destination. Within-MSOA travel is represented by red points on the map when the lines are shown, and accounts for `r round(sum(cents$all) / sum(zones$all) * 100)`% of commuters in `r capitalize_region(region)`. The between-zone MSOA flows visualised as lines and routes on the map also exclude commuters travelling outside `r capitalize_region(region)` and people with no fixed place of work.
 
-See [Lovelace et al. (2016)](http://arxiv.org/abs/1509.04425) for details of the methods used to estimate the cycling, health and carbon impacts of each scenario, and to visualise results at the area, line, route and route network level.
+An **Route Network (LSOA)** is also available, to complement the MSOA-level lines, routes and route network.  This LSOA route network includes all commuters living in `r capitalize_region(region)` and travelling <20km, except for those living and working the same LSOA or having no fixed place of work.  Unlike the MSOA route network, the LSOA route network includes commuters living in `r capitalize_region(region)` but working in another region within England. For more details please see User Manual C.
+
+See [Lovelace et al. (2017)](https://www.jtlu.org/index.php/jtlu/article/view/862) for details of the methods used to estimate the cycling, health and carbon impacts of each scenario, and to visualise results at the area, line, route and route network level.
 
 ## The `r capitalize_region(region)` region
 
@@ -91,16 +93,6 @@ The proportion of people who cycled as their main mode of travel to work baselin
 The percentage of cycling expected, based on the distance and hilliness of commutes in the region using the baseline model for England, was
 `r round(100 * (sum(zones$govtarget_slc) - sum(zones$bicycle)) / sum(zones$all) , 1)`%.
 
-<!--Can we please have here a table for the whole region per scenario, using area-based data? This would look like the following.  Cycling/walking/car drivers cells the percent is equal to the scenario level of cycling across all the zones, divided by 'all'.  In the "all other modes" cell, the percent is equal to 100% minus the first 3 rows. I suggest one decimal place.
-                              % cyclists    % walking   % car drivers   % all other modes
-  Census 2011
-  Government Target
-  Gender Equity
-  Go Dutch
-  Ebikes
--->
-<!-- **Table 1:** Mode split among commuters living in `r capitalize_region(region)` across scenarios
--->
 
 Summary results for the proportion of people walking, driving and using other modes under each scenario are illustrated in **Table 1**  below.
 
@@ -115,7 +107,7 @@ Summary results for the proportion of people walking, driving and using other mo
 
 <br><br>
 
-Figure 3 illustrates the overall number of people in between-zone flows cycling to work under each scenario (note that this does not include within-zone travel).
+Figure 3 illustrates the overall number of people in between-zone MSOA flows cycling to work under each scenario (note that this does not include within-MSOA travel).
 
 <!--Anna note I think we Ideally should revisit this figure at some point and include within-zone flows, I think it would make the figure much more helpful-->
 ```{r, echo=FALSE, warning=FALSE, fig.cap=""}
@@ -134,32 +126,6 @@ ggplot(dfsp) +
 
 **Figure 3:** Number of between-zone commuters within `r capitalize_region(region)` cycling by scenario and distance.
 
-
-<!-- ## Health and carbon impacts -->
-
-<!-- A modified -->
-<!-- version of the 2014 [HEAT tool](http://www.euro.who.int/en/health-topics/environment-and-health/Transport-and-health/publications/2011/health-economic-assessment-tools-heat-for-walking-and-for-cycling.-methodology-and-user-guide.-economic-assessment-of-transport-infrastructure-and-policies.-2014-update) -->
-<!-- was used to calculate health impacts, based on the extra physical activity gained through new cycling trips in each scenario, minus the physical activity displaced in any former walking trips that have now been switched to cycling. CO2 impacts are derived from changes in distance driven per scenario. -->
-
-<!-- Table 2 below illustrates the health and carbon impacts of the different scenarios.  For each scenario, comparisons are made with a counterfactual in which nobody in the region cycled (‘No cyclists’), and with the observed level of cycling in the 2011 Census.  -->
-
-<!-- please create table below.
-
-Scenario      Comparison                  Mortality Impacts                           Change in MTCO2e/year
-                              Change in deaths/yr    Value of change (£, millions)
-Census 2011  'No Cyclists'
-Govt Target 'No Cyclists'
-            Census 2011
-Gender equity 'No Cyclists'
-            Census 2011
-Go Dutch 'No Cyclists'
-            Census 2011
-Ebikes 'No Cyclists'
-            Census 2011-->
-
-<!--
-**Table 2:** Mortality and carbon impacts of scenarios in `r capitalize_region(region)`, relative to baseline and to a ‘no cyclists’ counterfactual.  Note that 'MTCO2e' stands for meg-tonnes of CO2-equivalent emissions
--->
 
 ## Health and carbon impacts
 
@@ -182,4 +148,5 @@ A modified version of the 2014 [HEAT tool](http://www.euro.who.int/en/health-top
 
 ## References
 
-Lovelace, Robin, Anna Goodman, Rachel Aldred, Nikolai Berkoff, Ali Abbas, and James Woodcock. 2016. "The Propensity to Cycle Tool: An Open Source Online System for Sustainable Transport Planning."" ArXiv:1509.04425 [Cs]. http://arxiv.org/abs/1509.04425.
+Lovelace, Robin, Anna Goodman, Rachel Aldred, Nikolai Berkoff, Ali Abbas, and James Woodcock. 2017. "The Propensity to Cycle Tool: An Open Source Online System for Sustainable Transport Planning."" Journal of Transport and Landuse. 10 (1), 505–528, DOI: 
+doi: 10.5198/jtlu.2016.862 (https://www.jtlu.org/index.php/jtlu/article/view/862)
