--- a/model_output.Rmd
+++ b/model_output.Rmd
@@ -148,5 +148,4 @@ A modified version of the 2014 [HEAT tool](http://www.euro.who.int/en/health-top
 
 ## References
 
-Lovelace, Robin, Anna Goodman, Rachel Aldred, Nikolai Berkoff, Ali Abbas, and James Woodcock. 2017. "The Propensity to Cycle Tool: An Open Source Online System for Sustainable Transport Planning."" Journal of Transport and Landuse. 10 (1), 505–528, DOI: 
-doi: 10.5198/jtlu.2016.862 (https://www.jtlu.org/index.php/jtlu/article/view/862)
+Lovelace, R., Goodman, A., Aldred, R., Berkoff, N., Abbas, A., Woodcock, J., 2017. The Propensity to Cycle Tool: An open source online system for sustainable transport planning. Journal of Transport and Land Use. 10:1, 505–528, <a target="_blank" href="https://www.jtlu.org/index.php/jtlu/article/view/862">DOI: 10.5198/jtlu.2016.862</a>
