--- a/model_output.Rmd
+++ b/model_output.Rmd
@@ -47,7 +47,7 @@ las_in_region <- las[las_in_region,]
 This document provides information about the data underlying the Propensity to Cycle Tool (PCT) for `r capitalize_region(region)`. The data were generated on `r build_date` and this document was created on `r Sys.Date()`. The PCT is an open source tool for sustainable transport planning, released under the conditions of the 
 <a target="_blank" href="https://www.gnu.org/licenses/agpl-3.0">Affero GPL</a>. Both the <a target="_blank" href="https://github.com/npct/pct">pct</a> and <a target="_blank" href="https://github.com/npct/pct">pct-shiny</a> can be modified by others as long as attribution is made to the original.
 
-This version of the PCT uses origin-destination (OD) data on travel to work from the 2011 Census. The dataset reports the number of people travelling by different modes from Middle Super Output Area zones (MSOA, average size 3325 commuters). There were `r prettyNum(sum(zones$all), big.mark = ",", scientific = F)` commuters living in `r capitalize_region(region)` recorded in the 2011 Census. All of these are represented in the zones data produced by the PCT.
+This version of the PCT uses origin-destination (OD) data on travel to work from the 2011 Census. The dataset reports the number of people travelling by different modes from Middle Super Output Area zones (<a target = "_black" href = "https://data.gov.uk/dataset/middle-layer-super-output-area-msoa-boundaries">MSOA</a>, average size 3325 commuters). There were `r prettyNum(sum(zones$all), big.mark = ",", scientific = F)` commuters living in `r capitalize_region(region)` recorded in the 2011 Census. All of these are represented in the zones data produced by the PCT.
 
 In `r capitalize_region(region)` there are `r nrow(l)` flows between MSOAs that a) start and end in `r capitalize_region(region)`, b) have a straight-line (Euclidean) distance of less than `r mdist`km and a fast-route distance less than 30km, and c) contain more than `r mflow` commuters (by any mode, counting commuters in both directions).   These `r nrow(l)` between-zone MSOA flows are visualised as **Straight Lines**, **Routes** (fast and quiet) and the **Route Network (MSOA)** on the interactive map, and account for `r round(sum(l$all) / sum(zones$all) * 100)`% of all commuters living in `r capitalize_region(region)`.
 
