--- a/2_create_pct-data/commute/msoa/model_output.Rmd
+++ b/2_create_pct-data/commute/msoa/model_output.Rmd
@@ -11,24 +11,18 @@ output:
 
 ```{r, include=FALSE}
 options(scipen=999)
-source("set-up.R")
 knitr::opts_chunk$set(message = FALSE)
 
+# Set relative starting path for route directory
+root <- "../../.."
+
 # Read-in the data
-if(!exists("region")) region <- "cambridgeshire"
-pct_data <- file.path("..", "pct-data")
-pct_bigdata <- file.path("..", "pct-bigdata")
-zones = readRDS(file.path(pct_data, region, "z.Rds"))
-cents = readRDS(file.path(pct_data, region, "c.Rds"))
-l = readRDS(file.path(pct_data, region, "l.Rds"))
-if(!exists("rf_nat"))
-  rf_nat <- readRDS(file.path(pct_bigdata, "msoa", "rf_nat.Rds"))
-rf = readRDS(file.path(pct_data, region, "rf.Rds"))
-rq = readRDS(file.path(pct_data, region, "rq.Rds"))
-rnet = readRDS(file.path(pct_data, region, "rnet.Rds"))
-params = readRDS(file.path(pct_data, region, "params.Rds"))
-list2env(x = params, envir = globalenv())
-source('shared_build.R')
+if(!exists("region")) region <- "london"
+zones <- readRDS(file.path(root, pct_data, purpose, geography, region, "z.Rds"))
+cents <- readRDS(file.path(root, pct_data, purpose, geography, region, "c.Rds"))
+l <- readRDS(file.path(root, pct_data, purpose, geography, region, "l.Rds"))
+rf <- readRDS(file.path(root, pct_data, purpose, geography, region, "rf.Rds"))
+rq <- readRDS(file.path(root, pct_data, purpose, geography, region, "rq.Rds"))
 dfscen <- dplyr::select(l@data, contains("slc"), -contains("co2"), all, olc = bicycle, dist_fast)
 dfsp <- gather(dfscen, key = scenario, value = slc, -dist_fast)
 dfsp$scenario <- factor(dfsp$scenario)
@@ -40,6 +34,13 @@ levels(dfsp$scenario)[6] <- c("Cyclists in Census 2011")
 las_in_region <- gIntersects(las_cents, region_shape, byid = T)
 las_in_region <- las_in_region[1,]
 las_in_region <- las[las_in_region,]
+
+for (i in 1:length(names(build_regions_params))){
+  assign(names(build_regions_params)[i], build_regions_params[,i])
+}
+(n_extra_flow <- n_flow_inter_regional - n_flow)
+(n_extra_people <- n_people_inter_regional - n_people)
+
 ```
 
 ## Key information 
@@ -49,11 +50,11 @@ This document provides information about the data underlying the Propensity to C
 
 This version of the PCT uses origin-destination (OD) data on travel to work from the 2011 Census. The dataset reports the number of people travelling by different modes from Middle Super Output Area zones (<a target = "_black" href = "https://data.gov.uk/dataset/middle-layer-super-output-area-msoa-boundaries">MSOA</a>, average size 3325 commuters). There were `r prettyNum(sum(zones$all), big.mark = ",", scientific = F)` commuters living in `r capitalize_region(region)` recorded in the 2011 Census. All of these are represented in the zones data produced by the PCT.
 
-In `r capitalize_region(region)` there are `r nrow(l)` flows between MSOAs that a) start and end in `r capitalize_region(region)`, b) have a straight-line (Euclidean) distance of less than `r mdist`km and a fast-route distance less than 30km, and c) contain more than `r mflow` commuters (by any mode, counting commuters in both directions).   These `r nrow(l)` between-zone MSOA flows are visualised as **Straight Lines**, **Routes** (fast and quiet) and the **Route Network (MSOA)** on the interactive map, and account for `r round(sum(l$all) / sum(zones$all) * 100)`% of all commuters living in `r capitalize_region(region)`.
+In `r capitalize_region(region)` there are `r n_flow` flows between MSOAs that a) start and end in `r capitalize_region(region)`, b) have a straight-line (Euclidean) distance of less than `r mdist`km and a fast-route distance less than 30km, and c) contain more than `r mflow` commuters (by any mode, counting commuters in both directions).   These `r n_flow` between-zone MSOA flows are visualised as **Straight Lines**, **Routes** (fast and quiet) and the **Route Network (MSOA)** on the interactive map, and account for `r round(n_people / sum(zones$all) * 100)`% of all commuters living in `r capitalize_region(region)`.  In addition, a further `r n_extra_flow` **inter-regional flows** of distance less than `r mdist`km and containing more than `r mflow` commuters are visualised as Straight Lines and Routes. These inter-regional flows contain an additional `r prettyNum(n_extra_people, big.mark = ",", scientific = F)` commuters who either live in `r capitalize_region(region)` and work outside, or work in `r capitalize_region(region)` and live outside.
 
 Between-zone MSOA flows exclude **within-MSOA travel**, when the MSOA zone of origin is the same as the zone of destination. Within-MSOA travel is represented by red points on the map when the lines are shown, and accounts for `r round(sum(cents$all) / sum(zones$all) * 100)`% of commuters in `r capitalize_region(region)`. The between-zone MSOA flows visualised as lines and routes on the map also exclude commuters travelling outside `r capitalize_region(region)` and people with no fixed place of work.
 
-An **Route Network (LSOA)** is also available, to complement the MSOA-level lines, routes and route network.  This LSOA (for Lower Super Output Area) route network includes all commuters living in `r capitalize_region(region)` and travelling <20km, except for those living and working the same LSOA or having no fixed place of work.  Unlike the MSOA route network, the LSOA route network includes commuters living in `r capitalize_region(region)` but working in another region within England. For more details please see User Manual C.
+A **Route Network (LSOA)** is also available, to complement the MSOA-level lines, routes and route network.  This LSOA (for Lower Super Output Area) route network includes all commuters living in `r capitalize_region(region)` and travelling <20km, except for those living and working the same LSOA or having no fixed place of work.  Unlike the MSOA route network, the LSOA route network includes commuters living in `r capitalize_region(region)` but working in another region within England. For more details please see User Manual C.
 
 See <a target="_blank" href="https://www.jtlu.org/index.php/jtlu/article/view/862">Lovelace et al. (2017)</a> for details of the methods used to estimate the cycling, health and carbon impacts of each scenario, and to visualise results at the area, line, route and route network level.
 
@@ -65,7 +66,7 @@ See <a target="_blank" href="https://www.jtlu.org/index.php/jtlu/article/view/86
 plot(zones, col = "lightgrey")
 plot(regions, add = T)
 plot(las_in_region, border = "blue", add = T, lwd = 2)
-plot(region_orig, lwd = 5, add = T)
+plot(regions, lwd = 5, add = T)
 lines(l[l$all > 100,], col = "green")
 ```
 
@@ -81,7 +82,7 @@ compared with a national average of
 
 ```{r, echo = FALSE, fig.cap=""}
 tm_shape(zones) +
-  tm_fill("avslope", n = 3, palette = "Oranges", title = "Average gradient\nof fast routes (%)") +
+  tm_fill("avslope_perc", n = 3, palette = "Oranges", title = "Average gradient\nof fast routes (%)") +
   tm_legend()
 ```
 
